src/r
g++ -DLOCALEDIR=\"/home/rbailey/src/install/share/locale\" -DHAVE_CONFIG_H -I. -I..  -I../lib -I../lib -I/home/rbailey/src/sqlite4/include -DENABLE_LOGGING -DENABLE_DEBUG -I/home/rbailey/src/install/include  -g -O0 -g -O0 -I/home/rbailey/src/install/include -std=gnu++11 -MT freeqd.o -MD -MP -MF .deps/freeqd.Tpo -c -o freeqd.o freeqd.cc
freeqd.cc: In function ‘int aggregate_table_segments(freeq_ctx*, const char*, table_segments*, freeq_table**)’:
freeqd.cc:106:18: error: expression cannot be used as a function
   if (it->second() != numcols) {
                  ^
In file included from freeqd.cc:15:0:
freeqd.cc:107:43: error: no match for call to ‘(const std::pair<std::basic_string<char>, int>) ()’
    dbg(ctx, "odd column %s:%d", it->first().first(), if->first()->second());
                                           ^
libfreeq-private.h:35:65: note: in definition of macro ‘freeq_log_cond’
       freeq_log(ctx, prio, __FILE__, __LINE__, __FUNCTION__, ## arg); \
                                                                 ^
freeqd.cc:107:4: note: in expansion of macro ‘dbg’
    dbg(ctx, "odd column %s:%d", it->first().first(), if->first()->second());
    ^
freeqd.cc:107:54: error: expected primary-expression before ‘if’
    dbg(ctx, "odd column %s:%d", it->first().first(), if->first()->second());
                                                      ^
libfreeq-private.h:35:65: note: in definition of macro ‘freeq_log_cond’
       freeq_log(ctx, prio, __FILE__, __LINE__, __FUNCTION__, ## arg); \
                                                                 ^
freeqd.cc:107:4: note: in expansion of macro ‘dbg’
    dbg(ctx, "odd column %s:%d", it->first().first(), if->first()->second());
    ^
freeqd.cc:109:44: error: no match for call to ‘(const std::pair<std::basic_string<char>, int>) ()’
    dbg(ctx, "good column %s:%d", it->first().first(), if->first()->second());
                                            ^
libfreeq-private.h:35:65: note: in definition of macro ‘freeq_log_cond’
       freeq_log(ctx, prio, __FILE__, __LINE__, __FUNCTION__, ## arg); \
                                                                 ^
freeqd.cc:109:4: note: in expansion of macro ‘dbg’
    dbg(ctx, "good column %s:%d", it->first().first(), if->first()->second());
    ^
freeqd.cc:109:55: error: expected primary-expression before ‘if’
    dbg(ctx, "good column %s:%d", it->first().first(), if->first()->second());
                                                       ^
libfreeq-private.h:35:65: note: in definition of macro ‘freeq_log_cond’
       freeq_log(ctx, prio, __FILE__, __LINE__, __FUNCTION__, ## arg); \
                                                                 ^
freeqd.cc:109:4: note: in expansion of macro ‘dbg’
    dbg(ctx, "good column %s:%d", it->first().first(), if->first()->second());
    ^
make: *** [freeqd.o] Error 1
